--- a/工具使用.md
+++ b/工具使用.md
@@ -1,3 +1,20 @@
+
+
+# MSYS2
+
+提供了一套较为完整的 linux 环境，可以在 Windows 系统下编译 linux 下的许多软件。
+
+网址：[MSYS2](https://www.msys2.org/)
+
+点击安装目录下的 msys2_shell.cmd 进入 msys2 环境
+
+
+> [!NOTE]
+> 取消注释 msys2_shell.cmd 中的 `set MSYS2_PATH_TYPE=inherit` 可以使用 windows 命令行的一些环境变量
+
+
+
+
 # Vim
 
 > `Esc`：进入普通模式（默认打开时的模式），后续介绍均在该模式下
@@ -49,6 +66,12 @@
 
 ```sh
 git clone <git url>
+```
+
+拉取子模块
+
+```sh
+git submodule update --init --recursive
 ```
 
 
@@ -1337,14 +1360,20 @@ nginx是一款轻量级的Web服务器、反向代理服务器及电子邮件（
 
 ## 注意事项
 
-:warning: **`nginx`的配置文件名字只能是`nginx.conf`**
 
-:warning: `nginx -t -c conf/nginx.conf`：在测试配置文件时**不要**在conf文件夹进行测试，否则即使配置文件编写正确也会报错
-:warning: 当用脚本执行`start nginx`，应该先进入nginx所在文件夹
+> [!WARNING] 
+> `nginx`的配置文件名字只能是`nginx.conf`
+> 
+> `nginx -t -c conf/nginx.conf`：在测试配置文件时**不要**在conf文件夹进行测试，否则即使配置文件编写正确也会报错
+> 
+> 当用脚本执行`start nginx`，应该先进入nginx所在文件夹
+> 
+
 当不设置`server`的`index`时，**不应该**还保留`index`，此时如果有`index.html`，那么默认会显示`index.html`
+
 markdown文件的mime类型为
 ```
-text/markdown                                    md;
+text/markdown  md;
 ```
 
 ## 常见问题
@@ -2043,19 +2072,26 @@ server {
 4. nasm（可选）：ASM汇编优化包
 
 #### 源码
+
 **nginx**
 [nginx: tags](https://hg.nginx.org/nginx/tags)，选择最新的版本，点击左侧的`zip`下载压缩包
+
 **PCRE**
 [PCRE - Perl Compatible Regular Expressions](https://www.pcre.org/)
+
 **zlib**
 [zlib Home Site](https://zlib.net/)
+
 **openssl**
 [/source/index.html (openssl.org)](https://www.openssl.org/source/)
+
 **fancyindex**
 ```bash
 git clone https://github.com/aperezdc/ngx-fancyindex
 ```
+
 上述源码（除了nginx）全部放在nginx的`objs/lib`文件夹（需要额外创建）。
+
 #### 修改编译配置
 ##### 修改openssl的编译配置
 修改`nginx\auto\lib\openssl\makefile.msvc`
@@ -2085,8 +2121,6 @@ all:
 # warnings
 CFLAGS="$CFLAGS -W3" # 原本是W4，改为W3
 ```
-
-
 
 ##### 添加msvc linker版本
 
@@ -2608,6 +2642,8 @@ bash run.sh
 ## CMD（Windows命令行）
 
 
+
+
 **显示帮助信息**
 ```cmd
 help tree   :: 以tree命令为例
@@ -2625,28 +2661,41 @@ tree | grep .py
 touch main.py & code main.py
 ```
 touch创建文件为bash的语法，可以换成`cd.>a.txt`。
+
 ### 基本命令
 
 #### tree 
+
 `tree [path] [/f][/a]`，Windows中的`tree`命令功能弱于Unix中的`tree`命令
 `/f`显示每个文件中文件的名称
 `/a`使用ASCII字符，而不使用扩展字符
 
 #### del 删除文件夹
+
 `del filename` 删除文件
+
+删除当前目录及其子文件夹中所有符合条件的文件
+
+```bat
+del /F /Q /A /S xxxx.xx
+```
 
 #### rmdir 删除文件夹
 `rmdir [/s][/q] foldername`：删除文件夹
 `/s`代表删除所有子目录跟其中的档案
 `/q`代表不再询问
 #### type 查看文件内容
+
 `type filename`：查看文件内容
 #### netstat 查看网络状态
+
 `netstat -ano|findstr "8080"`：查看某一端口（8080）的使用情况
 #### tasklist 
+
 `tasklist|findstr "15008"`：根据PID号找到对应的程序
 `tasklist | findstr "cmd"`：根据程序名找到对应的程序
 #### ren(rename)
+
 `ren oldfilename newfilename`：文件重命名
 
 #### find 搜索内容
@@ -2654,8 +2703,6 @@ touch创建文件为bash的语法，可以换成`cd.>a.txt`。
 `find "abc" d:\test.txt`：在D盘下的test.txt文件中查找含有 **abc** 这一字符串的所有行。
 
 `find /i "Abc" d:\test.txt`：不区分大小写
-
-
 
 
 
@@ -2824,18 +2871,29 @@ tasklist	:: 显示当前运行的任务
 tasklist | grep xxx		:: 查找对应的任务
 ```
 
-删除任务
+停止任务
 
 ```cmd
 tasklist | grep Code
 taskkill /F /IM Code.exe
 ```
 
-判断某个任务是否存在，如果存在就删除
+判断某个任务是否存在，如果存在就停止该进程
 
 ```cmd
 tasklist|findstr /i "nginx.exe">nul &&taskkill /F /IM nginx.exe||echo N
 ```
+
+### Bat 常见问题
+
+#### 命令重复执行
+
+bat 脚本的名字与系统中自带的bat名字相同，需要修改bat脚本的名字
+
+#### 脚本只执行一行
+
+可能是因为在bat脚本中调用了其它脚本（如另一个bat脚本，make等），可以在脚本的每行命令前加上 call 来解决这一问题。
+
 
 ## Powershell（Windows命令行）
 
@@ -4227,7 +4285,7 @@ if (argc < 2) {
 现在可以开始编译程序了
 
 ```shell
-cmake .   # 配置项目并生成本机构建系统（Windows下生成.sin文件）
+cmake .   # 配置项目并生成本机构建系统（Windows下生成.sln文件）
 cmake --build .		# 编译、连接项目
 cd Debug			# 进入Debug
 Tutorial			# 执行文件
