--- a/多媒体.md
+++ b/多媒体.md
@@ -476,7 +476,7 @@ if (ReturnCode.isSuccess(session.returnCode)) {
 ## ffmpeg 命令行
 
 ffmpeg下载：[ffmpeg第一弹:ffmpeg介绍和开发环境搭建 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/336663258)
-    
+
 > 注意从[Releases · BtbN/FFmpeg-Builds (github.com)](https://github.com/BtbN/FFmpeg-Builds/releases)下载-shared.zip版本
 
 
@@ -550,6 +550,7 @@ ffmpeg -i "input_video.mp4" -f segment -segment_time 3600 -vcodec copy -reset_ti
 ```
 
 时长由参数 -segment_time 指定，单位为 s。这个处理似乎没有声音了。
+
 
 9. m3u8 （多个 ts 文件）转为 mp4
 
@@ -674,6 +675,31 @@ switch (event.type) {
 }
 ```
 
+
+
+# OpenCV
+
+
+## 开发环境搭建
+
+
+### 在 visual studio 中的使用
+
+在系统变量中添加 `OPENCV_DIR` --> `D:\opencv\opencv\build\x64\vc15`
+
+在`Path`中添加 `%OPENCV_DIR%\bin`
+
+在visual studio中添加项目配置
+
+1. 在C/C++ `附加包含目录`中添加 `D:\opencv\opencv\build\include`
+2. 在链接器`常规` ，`附加库目录`中添加 `$(OPENCV_DIR)\lib`
+3. 在链接器`输入` ，`附加依赖项`中添加 `opencv_world454d.lib`
+
+**注意事项**
+
+1. 注意项目为×64位
+2. 如果为release，需要添加 `opencv_world454.lib` ， debug模式添加 `opencv_world454d.lib`
+3. 附加依赖项的添加需要注意opencv_world后面的版本号
 
 
 
