--- a/多媒体.md
+++ b/多媒体.md
@@ -680,6 +680,24 @@ switch (event.type) {
 # OpenCV
 
 
+## OpenCV 编译
+
+
+### CPU
+
+直接从 [Releases · opencv/opencv (github.com)](https://github.com/opencv/opencv/releases) 下载文件即可
+
+
+
+### GPU
+
+从 [opencv](https://github.com/opencv/opencv) 和 [opencv_contrib](https://github.com/opencv/opencv_contrib) 下载源码，使用 cmake 配置opencv。首先添加 `opencv_contrib`模块的引用，在`OPENCV_EXTRA_MODULES_PATH`条目中添加该模块的路径，然后选择`OPENCV_ENABLE_NONFREE`。然后选择 `WITH_CUDA`。，选择`OPENCV_DNN_CUDA`，此处还可以选择`OPENCV_DNN_OPENVINO`等不同的模型部署，最后选择`ENABLE_FAST_MATH`。为了让生成的依赖库文件都集成在一个文件中，还可以选择`BUILD_opencv_world`。
+
+Configure 时可能会遇到一些文件下载超时的问题，可以考虑手动下载，或者多试几次。生成项目后，用 Visual Studio 打开项目，编译 CMakeTargets 的 ALL_BUILD，然后再 build INSTALL（需要在Debug和Release模式下都处理一下）。编译完成后，在编译文件夹的 install 文件夹中能找到需要的文件。
+
+
+
+
 ## 开发环境搭建
 
 
@@ -702,7 +720,16 @@ switch (event.type) {
 3. 附加依赖项的添加需要注意opencv_world后面的版本号
 
 
+### 在 CMake 中使用
 
+```cmake
+set(OpenCV_DIR D:/opencv/install) # xxxx目录包含OpenCVConfig.cmake
+find_package(OpenCV REQUIRED)	# 找到opencv库
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+add_executable(${PROJECT_NAME} *.cpp)	# *.cpp指要编译的那些源文件
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
+```
 
 # WebRTC
 
