--- a/人工智能.md
+++ b/人工智能.md
@@ -673,3 +673,55 @@ $$
    $$
 
 3. 从步骤2开始增加$s$并重复，同时$s<\lambda$
+
+
+# 图神经网络
+
+
+对于pytorch，可以使用 [torch_geometric 库](https://pytorch-geometric.readthedocs.io/en/latest/index.html)
+
+
+下载命令（注意 pytorch 和 cuda 版本）[Installation — pytorch_geometric](https://pytorch-geometric.readthedocs.io/en/latest/install/installation.html)
+
+```sh
+pip install torch_geometric
+pip install torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.2.2+cu118.html
+```
+
+torch_geometric 库中有许多的现成的模型组件。PyG 中通过一个 `torch_geometric.data.Data` 实例描述单个图，默认有以下属性
+
+`data.X`：节点的特征矩阵 `[num_nodes, num_node_features]`
+
+`data.edge_index`：图的连通性矩阵 `[2, num_edges]` 类型为 long
+
+`data.edge_attr`：边的特征矩阵 `[num_edges, num_edge_features]`
+
+`data.y`：训练时的目标
+
+`data.pos`：节点的位置矩阵 `[num_nodes, num_dimensions]`
+
+注意，data 并不局限于这些属性，也并不需要所有的属性都被赋值。
+
+
+
+
+## 简介
+
+[图神经网络从入门到入门 - 知乎](https://zhuanlan.zhihu.com/p/136521625)
+
+普通的全连接层为特征矩阵 $X$ 乘以权重矩阵 $W$，图神经网络在此基础上还乘上了一个邻接矩阵 $A$。
+
+普通的全连接层：$H=\sigma(XW)$，图神经网络：$H=\sigma(AXW)$
+
+
+Graph Convolution Networks（GCN）是开山之作，将图像处理中的卷积操作简单的用到图结构数据处理中。具体操作如下
+
+$$
+{h_v} = f\left( {{1 \over {\left| {N(v)} \right|}}\sum\nolimits_{u  \in N(v)} {W{x_u}}  + b} \right)
+$$
+
+其中，$N(v)$ 为 v 的邻接节点，即将 v 的邻接节点聚合起来再做一个线性映射。
+
+
+
+
