--- a/深度学习库.md
+++ b/深度学习库.md
@@ -595,6 +595,39 @@ class ChannelNormalization(nn.Module):
 ```
 
 
+### 采样样本
+
+
+#### 对 B T C 类型数据进行采样
+
+如果不需要一次性将所有的负样本都采样，可以参考 wav2vec2 的做法
+
+如果想要对于每个正样本采样所有的负样本，可以参考如下做法
+
+```python
+def sample_negatives_full(self, y, num):  
+    """  
+    将所有的非正样本全部作为负样本  
+    """    
+    bsz, tsz, fsz = y.shape  
+    y = y.view(-1, fsz)  
+    with torch.no_grad():  
+        tszs = buffered_arange(bsz * num).unsqueeze(0).expand(bsz * num, -1)  
+        u_t = torch.triu(tszs, diagonal=1)  
+        u_l = torch.tril(tszs, diagonal=-1)  
+        neg_idxs = (u_t[:, 1:] + u_l[:, :-1])  # 去除对角线元素  
+        neg_idxs = neg_idxs.flatten()  
+    negs = y[neg_idxs.view(-1)]  
+    negs = negs.view(  
+        bsz, num, num * bsz - 1, fsz  
+    ).permute(  
+        2, 0, 1, 3  
+    )  
+    return negs
+```
+
+
+
 
 ## API
 
