--- a/强化学习.md
+++ b/强化学习.md
@@ -390,4 +390,221 @@ $$
 
 ## 近端策略优化
 
-近端策略优化（proximal policy optimization，PPO）
+
+### 重要性采样
+
+
+近端策略优化（proximal policy optimization，PPO）是策略梯度的变形。策略梯度的公式如下：
+
+$$
+\nabla {\bar R_\theta } = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {R(\tau )\nabla \log {p_\theta }(\tau )} \right]
+$$
+这个公式问题在于${E_{\tau  \sim {p_\theta }(\tau )}}$ 是对策略 $\pi_{\theta}$ 采样的轨迹 $\tau$ 求期望，一旦更新了参数，从$\theta$ 变成 $\theta'$ ，概率 $p_{\theta}(\tau)$ 就不对了，需要重新采样数据，这样智能体就需要花费大量时间来采样数据。因此想从同策略改为异策略，用另外一个策略 $\pi_{\theta'}$ 与环境交互（$\theta'$ 固定下来），用 $\theta'$ 采样到的数据去训练 $\theta$，这样就可以多次使用同一批数据，更加高效。
+
+具体的做法，利用了==重要性采样==的概念
+
+假设需要计算$f(x)$ 的期望值，需要从分布 $p$ 采样 $x$，再把 x 带入 f，做平均得到期望值。如果不能从分布 p 采样数据，只能从另外一个分布 q 采样，q 可以是任意分布，那么有如下变换
+
+$$
+{E_{x\sim p}}\left[ {f(x)} \right] = \int {f(x)p(x)} dx = \int {f(x){{p(x)} \over {q(x)}}q(x)} dx = {E_{x\sim q}}\left[ {f(x){{p(x)} \over {q(x)}}} \right]
+$$
+
+这样可以从 q 中采样 x，再计算 ${f(x){{p(x)} \over {q(x)}}}$，再取期望就能得到想要的值（需要注意的是 $p(x)$ 为零的时候，$q(x)$不能为零）。此外虽然 q 可以是任意分布，但是和 p 差距不能过大，否则方差差距很大。
+
+现在把重要性采样用于异策略算法中，使用策略 $\theta'$ 与环境交互（类似从 q 中采样 x），公式为
+
+$$
+\nabla {{\bar R}_\theta } = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }(\tau )} \over {{p_{\theta '}}(\tau )}}R(\tau )\nabla \log {p_\theta }(\tau )} \right]
+$$
+
+让 $\theta'$ 与环境交互采样大量的数据，$\theta$ 可以多次更新参数，一直到 $\theta$ 训练到一定的程度。更新多次以后，$\theta'$ 再重新做采样。
+
+实际操作时，不是给整个轨迹 $\tau$ 一样的分数，而是将每个状态-动作单独计算，即
+
+$$
+\nabla {{\bar R}_\theta } = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }({s_t},{a_t})} \over {{p_{\theta '}}({s_t},{a_t})}}{A^\theta }({s_t},{a_t})\nabla \log {p_\theta }({a_t}|{s_t})} \right]
+$$
+这里的 ${{A^\theta }({s_t},{a_t})}$ 假设和 ${{A^{\theta'} }({s_t},{a_t})}$ 差不多，如何估计 ${{A }({s_t},{a_t})}$ ：策略 $\theta'$ 在某一个状态采取某一个动作，接下来会得到累积奖励的值，再减去基线的值即可。
+
+假设模型是 $\theta$ 和 $\theta'$ 时，看到 $s_t$ 的概率是一样的，即 $p_{\theta}(s_t)=p_{\theta'}(s_t)$。所以有
+
+$$
+\eqalign{
+  & \nabla {{\bar R}_\theta } = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }({s_t},{a_t})} \over {{p_{\theta '}}({s_t},{a_t})}}{A^{\theta '}}({s_t},{a_t})\nabla \log {p_\theta }({a_t}|{s_t})} \right]  \cr 
+  &  = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }({a_t}|{s_t}){p_\theta }({s_t})} \over {{p_{\theta '}}({a_t}|{s_t}){p_{\theta '}}({s_t})}}{A^{\theta '}}({s_t},{a_t})\nabla \log {p_\theta }({a_t}|{s_t})} \right]  \cr 
+  &  = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }({a_t}|{s_t})} \over {{p_{\theta '}}({a_t}|{s_t})}}{A^{\theta '}}({s_t},{a_t})\nabla \log {p_\theta }({a_t}|{s_t})} \right] \cr} 
+$$
+${{p_\theta }({a_t}|{s_t})}$ 很好算，策略网络的参数为 $\theta$，输入状态 $s_t$ 到策略网络中，它会输出每个 $a_t$ 的概率，所以只需要知道 $\theta$ 和 $\theta'$ 就可以计算。
+
+由于 $\nabla f(x) = f(x)\nabla \log f(x)$，再加上对 $\theta$ 求梯度时，$p_{\theta'}(a_t|s_t)$ 和 $A^{\theta'}(s_t,a_t)$ 都是常数，因此要优化的目标函数为
+
+$$
+{J^{\theta '}}(\theta ) = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }({a_t}|{s_t})} \over {{p_{\theta '}}({a_t}|{s_t})}}{A^{\theta '}}({s_t},{a_t})} \right]
+$$
+
+### 近端策略优化
+
+为了避免 $p_{\theta}(a_t|s_t)$ 与 $p_{\theta'}(a_t|s_t)$ 相差太多，可以约束 $\theta$ 和 $\theta'$ 输出的动作的 KL 散度，使其更加相似。所以 PPO 算法的目标函数为
+
+
+
+PPO 目标函数中加入了 KL 散度的约束，使得行为策略 $\theta'$ 和目标策略 $\theta$ 非常接近，PPO 的行为策略和目标策略可认为是同一个策略，因此PPO是同策略算法。
+
+$$
+J_{PPO}^{\theta '}(\theta ) = {J^{\theta '}}(\theta ) - \beta {\rm{KL}}(\theta ,\theta ')
+$$
+这里对于 $\beta$ 有一个自适应调整方法，先设置一个可以接受的 KL 散度最大值，如果 KL 散度太大，表示惩罚项 ${\rm{KL}}(\theta ,\theta ')$ 没有发挥作用，需要增大 $\beta$，如果 KL 散度比最小值还要小，就需要减小 $\beta$。
+
+
+如果觉得计算KL散度计算复杂，还有一种裁剪方法
+
+$$
+J_{PPO}^{\theta '}(\theta ) = \sum\limits_{({s_t},{a_t})} {\min \left( {{{{p_\theta }({a_t}|{s_t})} \over {{p_{\theta '}}({a_t}|{s_t})}}{A^{\theta '}}({s_t},{a_t}),clip\left( {{{{p_\theta }({a_t}|{s_t})} \over {{p_{\theta '}}({a_t}|{s_t})}},1 - \varepsilon ,1 + \varepsilon } \right){A^{\theta '}}({s_t},{a_t})} \right)} 
+$$
+
+$\varepsilon$ 是一个超参数，可以取 0.1 或 0.2。
+
+
+## 深度 Q 网络
+
+传统的强化学习算法会使用表格的形式存储状态价值函数 $V(s)$ 或动作价值函数 $Q(s,a)$，但是这样的方法存在很大的局限性。例如，现实中的强化学习任务所面临的状态空间往往是连续的，存在无穷多个状态，在这种情况下，就不能再使用表格对价值函数进行存储。价值函数近似利用函数直接拟合状态价值函数或动作价值函数，降低了对存储空间的要求，有效地解决了这个问题。
+
+为了在连续的状态和动作空间中计算值函数 $Q_{\pi}(s,a)$，可以用一个函数 $Q_{\phi}(s,a)$ 来近似计算，称为**价值函数近似**，$Q_{\phi}(s,a)$ 被称为 Q 网络。
+
+
+### 状态价值函数
+
+深度Q网络是基于价值的算法，在基于价值的算法里面，我们学习的不是策略，而是评论员。评论员的任务是评价现在的动作有多好或有多不好。假设有一个演员，其要学习一个策略来得到尽量高的回报。评论员就是评价演员的策略 $\pi$ 好还是不好，即策略评估。例如有一种评论员称为状态价值函数 $V_{\pi}$，用于表示从状态 s，接下来一直到游戏结束，期望的累积奖励有多大。
+
+
+
+### 动作价值函数
+
+还有另外一种评论员称为 Q 函数，又被称为动作价值函数，状态价值函数的输入是一个状态，而动作价值函数的输入是一个状态-动作对，指在某个状态采取某个动作，假设都使用策略 $\pi$，得到的累计奖励的期望值有多大。
+
+Q 函数有一个需要注意的问题是，策略 $\pi$ 在看到状态 $s$ 的时候，它采取的动作不一定是 $a$。Q函数假设在状态 $s$ 强制采取动作 $a$，而不管我们现在考虑的策略 $\pi$ 会不会采取动作 $a$，这并不重要。在状态 $s$ 强制采取动作 $a$。接下来都用策略 $\pi$ 继续玩下去，就只有在状态 $s$，我们才强制一定要采取动作 $a$，接下来就进入自动模式，让策略 $\pi$ 继续玩下去，得到的期望奖励才是$Q_{\pi}(s,a)$。
+
+Q 函数有两种写法：（1）输入是状态与动作，输出就是一个标量。这种Q函数既适用于连续动作（动作是无法穷举的），又适用于离散动作。（2）输入是一个状态，输出就是多个值。这种Q函数只适用于离散动作。
+
+一开始先随机初始化一个策略 $\pi$，$\pi$ 与环境交互，收集数据，接下来计算 $\pi$ 的 Q 值，去衡量一下 $\pi$ 在某一个状态强制采取某一个动作，接下来会得到的期望奖励。学习出一个 Q 函数，就能找到一个新策略 $\pi'$，策略$\pi'$ 会比 $\pi$ 更好，然后根据 $\pi'$ 学习 Q 函数，如此循环下去。新策略 $\pi'$ 的公式为
+
+$$
+\pi '(s) = \mathop {\arg \max }\limits_a {Q_\pi }(s,a)
+$$
+假设我们已经学习出 $\pi$ 的 Q 函数，在某一个状态 $s$，把所有可能的动作 $a$ 一一代入Q 函数，看看哪一个 $a$ 可以让 Q 函数的值最大，这个动作就是 $\pi'$ 会采取的动作。
+
+
+### 目标网络
+
+
+在状态 $s_t$ 采取动作 $a_t$ 以后，得到奖励 $r_t$，进入状态 $s_{t+1}$，根据 Q 函数，有
+
+$$
+{Q_\pi }({s_t},{a_t}) = {r_t} + {Q_\pi }({s_{t + 1}},\pi ({s_{t + 1}}))
+$$
+
+这个公式说明 Q 函数输入 $s_t$、$a_t$ 得到的值，与输入 $s_{t+1}$、$\pi(s_t+1)$ 得到的值之间，我们希望它们相差 $r_t$，但是这样并不容易训练，训练不稳定。通常做法分成两个 Q 网络，两个网络的初始参数相同，先将右边的 Q 网络固定，称之为目标网络，再训练左边 Q 网络的参数，左边 Q 网络更新多次后，再用更新过的 Q 网络替换目标网络，继续训练左边的 Q 网络，损失直接使用MSE损失即可。
+
+
+### 探索
+
+使用 $\varepsilon$ - 贪心选择动作，
+
+$$
+a = \left\{ \matrix{
+  \mathop {\arg \max }\limits_a Q(s,a),\quad p = 1 - \varepsilon  \hfill \cr 
+  random\quad \quad p = \varepsilon  \hfill \cr}  \right.
+$$
+另一种方法称为玻尔兹曼探索，对于任意的 $s$，$a$，$Q(s,a)\ge0$，因此 $a$ 被选中的概率与 $e^{Q(s,a)/T}$ 成正比，即
+
+$$
+\pi (a|s) = {{{e^{Q(s,a)/T}}} \over {\sum\nolimits_{a' \in A} {{e^{Q(s,a')/T}}} }}
+$$
+
+T 称为温度系数，如果 T 很大，那么所有动作几乎以等概率选择，如果 T 很小，Q 值大的动作更容易被选中。
+
+
+### 经验回放
+
+经验回放会构建一个回放缓冲区，回放缓冲区又被称为回放内存。回放内存中的一条数据指之前在某一个状态 $s_t$，采取某一个动作 $a_t$，得到了奖励 $r_t$，进入状态 $s_{t+1}$。回放缓冲区里面的经验可能来自不同的策略，我们每次用 $\pi$ 与环境交互的时候， 可能只交互10000 次，接下来我们就更新 $\pi$了。但是回放缓冲区里面可以放5万条数据，所以5万条数据可能来自不同的策略。训练时，从回放缓存区中随机挑选一个batch，然后用这个batch去更新 Q 网络。
+
+
+
+### 深度Q网络
+
+下面可以总结深度 Q 网络算法了
+
++ 初始化网络 $Q$ 和目标网络 $Q_t$，令 $Q_t=Q$
+
++ 对于每一个回合
+	+ 对于每个时间步
+		+ 对于给定的状态 $s_t$，基于 Q（$\varepsilon$-贪婪）执行动作 $a_t$
+		+ 获得反馈 $r_t$，并获得新的状态 $s_{t+1}$
+		+ 将 $(s_t,a_t,r_t,s_{t+1})$ 存储到缓冲区
+		+ 从缓冲区采样一个batch
+		+ 目标值是 $y = {r_i} + \mathop {\max }\limits_a {Q_t}({s_{i + 1}},a)$
+		+ 更新 Q 的参数使得 $Q(s_i,a_i)$ 尽可能接近于 y
+		+ 每 C 次更新重置 $Q_t=Q$
+
+
+
+## 深度 Q 网络进阶技巧
+
+
+
+### 双深度 Q 网络
+
+
+普通的深度 Q 网络往往存在Q值高估的问题，这主要是因为 Q 网络每次都选最大Q值的动作，假如一个动作被高估了，那么就有很大可能被选中。双深度Q网络解决这个问题的方法是，选动作的 Q 函数和计算值的 Q 函数不是同一个，DDQN中有两个 Q 网络— $Q$ 和 $Q'$。如果 $Q$ 高估了选出来的动作 $a$，只要 $Q'$ 没有高估就行，假设 $Q'$ 高估了某个动作的值，只要 $Q$ 不选这个动作就可以
+
+$$
+Q({s_t},{a_t}) \leftrightarrow {r_t} + Q'\left( {{s_{t + 1}},\mathop {\arg \max }\limits_a Q({s_{t + 1}},a)} \right)
+$$
+在DDQN里面，我们会用会更新参数的 Q 网络去选动作，用目标 Q 网络（固定住的网络）计算值。
+
+DDQN 相较于原来的深度 Q 网络的更改是最少的，它几乎没有增加任何的运算量，也不需要新的网络，因为原来就有两个网络。我们只需要做一件事：本来是用目标网络 $Q'$ 来找使 $Q$ 值最大的 $a$，现在改成用另外一个会更新的 $Q$ 网络来找使 $Q$ 值最大的 $a$。如果只选一个技巧，我们一般都会选DDQN，因为其很容易实现。
+
+
+### 竞争深度 Q 网络
+
+竞争深度 Q 网络改变了原来 Q 网络的架构，原本是输入状态，输出每个动作的 Q 值。竞争深度 Q 网络则分成两部分，第一部分输出标量 $V(s)$，第二部分输出一个向量 $A(s,a)$，最终的 Q 值是两者之和。这种网络的优点是由于 $V(s)$ 是一个标量，那么即使一些动作没有被采样到，也可以通过 $V(s)$ 修改这些动作的 Q 值，更加高效地估计 Q 值。
+
+为了避免竞争深度 Q 网络训练到最后，$V(s)$ 为0，$A(s,a) = Q(s,a)$，需要对 $A(s,a)$ 加一些约束，如让 $\sum\limits_a {A(s,a)}  = 0$，这样网络会被强迫学习 $V(s)$。具体操作是先计算每一列的均值，再将这一列减去均值，这样一列之和为0。
+
+
+### 优先级经验回放
+
+原本在采样数据时，是均匀地从回放缓冲区采样数据。优先级是根据训练时的时序差分误差（网络输出和目标之间的差距），如果误差大，那么代表这些数据不容易训练，应该更容易被采样到。
+
+
+### 在蒙特卡洛方法和时序差分方法中取得平衡
+
+为了结合蒙特卡洛方法和时序差分方法的优点，可以使用多步方法。我们记录在 $s_t$ 采取 $a_t$，得到 $r_t$ 时，会进入的 $s_{t+1}$。一直记录到第 N 个步骤以后，在 $s_{t+N}$ 采取 $a_{t+N}$，得到 $r_{t+N}$，进入 $s_{t+N+1}$ 的这些经验，把它们保存下来。实际上在做更新的时候，在做 Q 网络学习的时候，我们要让 $Q(s_t, a_t)$ 与目标值越接近越好。$\hat Q$ 所计算的不是 $s_{t+1}$ 的，而是 $s_{t+N+1}$ 的奖励。我们会把 N 个步骤以后的状态 $s_{t+N+1}$ 输入到 $\hat Q$ 中去计算 N 个步骤以后会得到的奖励。如果要算目标值，要再加上多步（multi-step）的奖励 $\sum_{t'=t}^{t+N} r_{t'}$ ，多步的奖励是从时间 t 一直到 t+N 的 N+1 个奖励的和。我们希望 $Q(s_t,a_t)$ 和目标值越接近越好。
+
+
+### 噪声网络
+
+噪声网络用来改进探索，噪声网络指在参数空间加上噪声，每一次在一个回合开始的时候，当智能体要与环境交互的时候，智能体使用 Q 函数来采取动作，Q 函数里面就是一个网络，我们在网络的每一个参数上加上一个高斯噪声，就把原来的 $Q$ 函数变成 ${\tilde Q}$。我们把每一个参数都加上一个高斯噪声，就得到一个新的网络 ${\tilde Q}$。使用噪声网络执行的动作为
+
+$$
+a = \mathop {\arg \max }\limits_a \tilde Q(s,a)
+$$
+注意在同一个回合中，参数虽然会被加上噪声，但是同个回合里面参数是固定的，只有换回合时才会重新采样噪声。
+
+相比于 $\varepsilon$ - 探索，噪声网络可以做到面对同一个状态，动作的选择也是一样的，更符合实际情况。
+
+### 分布式Q 函数
+
+分布式 Q 函数是对分布建模，具体做法是：假设分布的值就分布在某一个范围里面，将范围分成一个个小区间，Q函数的输出就是要预测我们在某一个状态采取某一个动作得到的奖励，其落在某一个长条里面的概率。在做测试的时候，我们选平均值最大的动作执行。
+
+
+### 彩虹
+
+将各种方法结合起来，每个方法训练，取每个方法分数的中位数。
+
+
+
+
+
+
+
