--- a/强化学习.md
+++ b/强化学习.md
@@ -154,6 +154,7 @@ $$
 \pi (s) = \mathop {\arg \max }\limits_a \left[ {R(s,a) + \gamma \sum\limits_{s' \in S} {p(s'|s,a){V_{H + 1}}(s')} } \right]
 $$
 
+
 ## 表格型方法
 
 
@@ -170,8 +171,7 @@ $$
 根据大数定律，只要我们得到足够多的轨迹，就可以趋近这个策略对应的价值函数。$N(s)\to \infty$，$V(s)\to V_{\pi}(s)$
 
 
-时序差分方法的目的是对于某个给定的策略$\pi$ ，在线地计算价值函数 $V_{\pi}$，最简单的是一步时序差分，每往前走一步，就做一步自举，用得到的估计回报（estimated return）$r_{t+1} + \gamma V (s_{t+1})$ 来更
-新上一时刻的值 $V(s_t)$：
+时序差分方法的目的是对于某个给定的策略$\pi$ ，在线地计算价值函数 $V_{\pi}$，最简单的是一步时序差分，每往前走一步，就做一步自举，用得到的估计回报（estimated return）$r_{t+1} + \gamma V (s_{t+1})$ 来更新上一时刻的值 $V(s_t)$：
 
 $$
 V({s_t}) \leftarrow V({s_t}) + \alpha \left( {{r_{t + 1}} + \gamma V({s_{t + 1}}) - V({s_t})} \right)
@@ -207,8 +207,7 @@ $$
 如果 $(s_t,a_t)$ 出现在 $s_0,a_0$，$s_1,a_1$，...，$s_{t-1}, a_{t-1}$ 中，将 $G$ 追加到 $R(s_t, a_t)$ 中，$R(s_t, a_t)$ 的平均为 $Q(s_t,a_t)$，然后根据 Q 函数优化策略：$\pi ({s_t}) \leftarrow \mathop {\arg \max }\limits_a Q({s_t},{a_t})$
 
 
-时序差分是给定一个策略，然后我们去估计它的价值函数。接着我们要考虑怎么使用时序差分方
-法的框架来估计 Q 函数，也就是 Sarsa 算法。Sarsa算法很简单，就是把时序差分算法中的价值函数换成 Q 函数。
+时序差分是给定一个策略，然后我们去估计它的价值函数。接着我们要考虑怎么使用时序差分方法的框架来估计 Q 函数，也就是 Sarsa 算法。Sarsa算法很简单，就是把时序差分算法中的价值函数换成 Q 函数。
 
 $$
 Q({s_t},{a_t}) \leftarrow Q({s_t},{a_t}) + \alpha \left( {{r_{t + 1}} + \gamma Q({s_{t + 1}},{a_{t + 1}}) - Q({s_t},{a_t})} \right)
@@ -346,8 +345,6 @@ $$
 为了收集数据，先用参数为 $\theta$ 的智能体与环境交互，也就是拿智能体先与环境交互，得到一些数据和奖励，拿这些数据计算梯度，然后用奖励作为权重，更新模型。
 
 
-
-
 ### 实现技巧
 
 
@@ -384,11 +381,10 @@ $$
 $$
 {G_t} = \sum\limits_{k = t + 1}^T {{\gamma ^{k - t - 1}}{r_k}}  = {r_{t + 1}} + \gamma {G_{t + 1}}
 $$
-先产生一个回合的数据，比如 $(s_1, a_1, G_1), (s_2, a_2, G_2), \cdots , (s_T , a_T , G_T)$，然后针对每个动作计算梯度$\nabla \log \pi ({a_t}|{s_t},\theta )$ 。在代码上计算时，我们要获取神经网络的输出。神经网络会输出每个动作对应的概率值（比如 0.2、0.5、0.3），然后我们还可以获取实际的动作 $a_t$，把动作转成独热
-（one-hot）向量（比如 `[0,1,0]`）与 `log[0.2, 0.5, 0.3]` 相乘就可以得到 $\nabla \log \pi ({a_t}|{s_t},\theta )$ 。
+先产生一个回合的数据，比如 $(s_1, a_1, G_1), (s_2, a_2, G_2), \cdots , (s_T , a_T , G_T)$，然后针对每个动作计算梯度$\nabla \log \pi ({a_t}|{s_t},\theta )$ 。在代码上计算时，我们要获取神经网络的输出。神经网络会输出每个动作对应的概率值（比如 0.2、0.5、0.3），然后我们还可以获取实际的动作 $a_t$，把动作转成独热向量（比如 `[0,1,0]`）与 `log[0.2, 0.5, 0.3]` 相乘就可以得到 $\nabla \log \pi ({a_t}|{s_t},\theta )$ 。
 
 
-## 近端策略优化
+## 近端策略优化（PPO）
 
 
 ### 重要性采样
@@ -424,7 +420,7 @@ $$
 $$
 \nabla {{\bar R}_\theta } = {E_{\tau  \sim {p_\theta }(\tau )}}\left[ {{{{p_\theta }({s_t},{a_t})} \over {{p_{\theta '}}({s_t},{a_t})}}{A^\theta }({s_t},{a_t})\nabla \log {p_\theta }({a_t}|{s_t})} \right]
 $$
-这里的 ${{A^\theta }({s_t},{a_t})}$ 假设和 ${{A^{\theta'} }({s_t},{a_t})}$ 差不多，如何估计 ${{A }({s_t},{a_t})}$ ：策略 $\theta'$ 在某一个状态采取某一个动作，接下来会得到累积奖励的值，再减去基线的值即可。
+这里的 ${{A^\theta }({s_t},{a_t})}$ 假设和 ${{A^{\theta'} }({s_t},{a_t})}$ 差不多，如何估计 ${{A }({s_t},{a_t})}$ ：策略 $\theta'$ 在某一个状态采取某一个动作，接下来会得到累积奖励的值，再减去基线的值（可以是评论员对于动作的评价值）即可。
 
 假设模型是 $\theta$ 和 $\theta'$ 时，看到 $s_t$ 的概率是一样的，即 $p_{\theta}(s_t)=p_{\theta'}(s_t)$。所以有
 
@@ -446,13 +442,13 @@ $$
 
 为了避免 $p_{\theta}(a_t|s_t)$ 与 $p_{\theta'}(a_t|s_t)$ 相差太多，可以约束 $\theta$ 和 $\theta'$ 输出的动作的 KL 散度，使其更加相似。所以 PPO 算法的目标函数为
 
-
-
-PPO 目标函数中加入了 KL 散度的约束，使得行为策略 $\theta'$ 和目标策略 $\theta$ 非常接近，PPO 的行为策略和目标策略可认为是同一个策略，因此PPO是同策略算法。
-
 $$
 J_{PPO}^{\theta '}(\theta ) = {J^{\theta '}}(\theta ) - \beta {\rm{KL}}(\theta ,\theta ')
 $$
+
+PPO 目标函数中加入了 KL 散度的约束，使得行为策略 $\theta'$ 和目标策略 $\theta$ 非常接近，PPO 的行为策略和目标策略可认为是同一个策略，因此PPO是同策略算法。
+
+
 这里对于 $\beta$ 有一个自适应调整方法，先设置一个可以接受的 KL 散度最大值，如果 KL 散度太大，表示惩罚项 ${\rm{KL}}(\theta ,\theta ')$ 没有发挥作用，需要增大 $\beta$，如果 KL 散度比最小值还要小，就需要减小 $\beta$。
 
 
@@ -555,11 +551,12 @@ T 称为温度系数，如果 T 很大，那么所有动作几乎以等概率选
 ### 双深度 Q 网络
 
 
-普通的深度 Q 网络往往存在Q值高估的问题，这主要是因为 Q 网络每次都选最大Q值的动作，假如一个动作被高估了，那么就有很大可能被选中。双深度Q网络解决这个问题的方法是，选动作的 Q 函数和计算值的 Q 函数不是同一个，DDQN中有两个 Q 网络— $Q$ 和 $Q'$。如果 $Q$ 高估了选出来的动作 $a$，只要 $Q'$ 没有高估就行，假设 $Q'$ 高估了某个动作的值，只要 $Q$ 不选这个动作就可以
+普通的深度 Q 网络往往存在Q值高估的问题，这主要是因为 Q 网络每次都选最大Q值的动作，假如一个动作被高估了，那么就有很大可能被选中。双深度Q网络解决这个问题的方法是，选动作的 Q 函数和计算值的 Q 函数不是同一个，DDQN中有两个 Q 网络 — $Q$ 和 $Q'$。如果 $Q$ 高估了选出来的动作 $a$，只要 $Q'$ 没有高估就行，假设 $Q'$ 高估了某个动作的值，只要 $Q$ 不选这个动作就可以
 
 $$
 Q({s_t},{a_t}) \leftrightarrow {r_t} + Q'\left( {{s_{t + 1}},\mathop {\arg \max }\limits_a Q({s_{t + 1}},a)} \right)
 $$
+
 在DDQN里面，我们会用会更新参数的 Q 网络去选动作，用目标 Q 网络（固定住的网络）计算值。
 
 DDQN 相较于原来的深度 Q 网络的更改是最少的，它几乎没有增加任何的运算量，也不需要新的网络，因为原来就有两个网络。我们只需要做一件事：本来是用目标网络 $Q'$ 来找使 $Q$ 值最大的 $a$，现在改成用另外一个会更新的 $Q$ 网络来找使 $Q$ 值最大的 $a$。如果只选一个技巧，我们一般都会选DDQN，因为其很容易实现。
@@ -569,7 +566,7 @@ DDQN 相较于原来的深度 Q 网络的更改是最少的，它几乎没有增
 
 竞争深度 Q 网络改变了原来 Q 网络的架构，原本是输入状态，输出每个动作的 Q 值。竞争深度 Q 网络则分成两部分，第一部分输出标量 $V(s)$，第二部分输出一个向量 $A(s,a)$，最终的 Q 值是两者之和。这种网络的优点是由于 $V(s)$ 是一个标量，那么即使一些动作没有被采样到，也可以通过 $V(s)$ 修改这些动作的 Q 值，更加高效地估计 Q 值。
 
-为了避免竞争深度 Q 网络训练到最后，$V(s)$ 为0，$A(s,a) = Q(s,a)$，需要对 $A(s,a)$ 加一些约束，如让 $\sum\limits_a {A(s,a)}  = 0$，这样网络会被强迫学习 $V(s)$。具体操作是先计算每一列的均值，再将这一列减去均值，这样一列之和为0。
+为了避免竞争深度 Q 网络训练到最后，$V(s)$ 为0，$A(s,a) = Q(s,a)$，需要对$A(s,a)$ 加一些约束，如让 $\sum\limits_a {A(s,a)}  = 0$，这样网络会被强迫学习 $V(s)$。具体操作是先计算每一列的均值，再将这一列减去均值，这样一列之和为0。
 
 
 ### 优先级经验回放
@@ -604,7 +601,189 @@ $$
 
 
 
+## 针对连续动作的深度 Q 网络
 
 
+处理连续动作的几种方法
+
+### 对动作进行采样
+
+我们可以采样出 N 个可能的 $a: \{a_1, a_2, \cdots , a_N\}$ ，把它们一个一个地代入 Q 函数，看谁的 Q 值最大。
 
 
+### 梯度上升
+
+把动作 $a$ 当作参数，用 $a$ 最大化 Q 函数，然后用梯度上升去更新 $a$ 的值，但是这样计算量会比较大。
+
+
+### 设计网络架构
+
+通常 Q 网络的输入是 s，可以将其改成输入为 s 和 a，输出为向量 $\mu(s)$、矩阵 $\Sigma (s)$ 和标量 $V(s)$，将 Q 函数的定义改为
+
+$$
+Q(s,a) =  - {\left( {a - \mu (s)} \right)^T}\Sigma (s)\left( {a - \mu (s)} \right) + V(s)
+$$
+
+注意 $a$ 此处是连续动作，所以是一个向量，$\Sigma (s)$ 是一个正定矩阵。当 $a=\mu(s)$ 时，Q 值最大，所以直接将 $\mu(s)$ 作为动作。
+
+
+### 不使用深度 Q 网络
+
+使用演员—评论员方法
+
+
+## 演员—评论员算法
+
+演员-评论员算法是一种结合策略梯度和时序差分学习的强化学习方法，其中，演员是指策略函数 $\pi_{\theta}(a|s)$，即学习一个策略以得到尽可能高的回报。评论员是指价值函数 $V_{\pi}(s)$，对当前策略的值函数进行估计，即评估演员的好坏。借助于价值函数，演员-评论员算法可以进行单步参数更新，不需要等到回合结束才进行更新。在演员-评论员算法里面，最知名的算法就是异步优势演员-评论员算法。如果我们去掉异步，则为优势演员-评论员（advantage actor-critic，A2C）算法。A2C 算法又被译作优势演员-评论员算法。如果我们加了异步，变成异步优势演员-评论员算法（A3C）。
+
+
+### 优势演员-评论员算法（A2C）
+
+在策略梯度算法中，更新策略参数 $\theta$ 时可以通过
+
+$$
+\nabla {{\bar R}_\theta } \approx {1 \over N}\sum\limits_{n = 1}^N {\sum\limits_{t = 1}^{{T_n}} {\left( {\sum\limits_{t' = t}^{{T_n}} {{\gamma ^{t' - t}}r_{t'}^n}  - b} \right)\nabla \log {p_\theta }(a_t^n|s_t^n)} } 
+$$
+来计算梯度，其中我们可以用 G 来表示累积奖励，即
+
+$$
+G = \sum\limits_{t' = t}^{{T_n}} {{\gamma ^{t' - t}}r_{t'}^n}  - b
+$$
+
+G 是非常不稳定的，因此可以堪称一个随机变量，深度 Q 网络的目的便是估测在状态 s 采取动作 a 时 G 的期望值。随机变量 G 的期望值正好就是 Q 值，即
+
+$$
+E\left[ {G_t^n} \right] = {Q_{{\pi _\theta }}}\left( {s_t^n,a_t^n} \right)
+$$
+
+所以假设用 $E\left[ {G_t^n} \right]$ 代表 $\sum\limits_{t' = t}^{{T_n}} {{\gamma ^{t' - t}}r_{t'}^n}$ 这一项，对于基线有不同的方法表示，一个常见的方法是利用价值函数 ${V_{{\pi _\theta }}}(s_t^n)$ 表示基线，把策略梯度里面 $\sum\limits_{t' = t}^{{T_n}} {{\gamma ^{t' - t}}r_{t'}^n}  - b$ 换成 ${Q_{{\pi _\theta }}}\left( {s_t^n,a_t^n} \right) - {V_{{\pi _\theta }}}(s_t^n)$，这就是优势演员—评论员算法
+
+$$
+\nabla {{\bar R}_\theta } \approx {1 \over N}\sum\limits_{n = 1}^N {\sum\limits_{t = 1}^{{T_n}} {\left( {{Q_{{\pi _\theta }}}\left( {s_t^n,a_t^n} \right) - {V_{{\pi _\theta }}}(s_t^n)} \right)\nabla \log {p_\theta }(a_t^n|s_t^n)} } 
+$$
+为了避免同时估计两个网络，将 ${Q_{{\pi _\theta }}}\left( {s_t^n,a_t^n} \right)$ 改写为 $r_t^n + {V_\pi }(s_{t + 1}^n)$ 的期望值，去掉期望值也可以，最终得到
+$$
+\nabla {{\bar R}_\theta } \approx {1 \over N}\sum\limits_{n = 1}^N {\sum\limits_{t = 1}^{{T_n}} {\left( {r_t^n + {V_\pi }(s_{t + 1}^n) - {V_{{\pi _\theta }}}(s_t^n)} \right)\nabla \log {p_\theta }(a_t^n|s_t^n)} } 
+$$
+
+在优势演员-评论员算法中，先用策略 $\pi$ 和环境交互得到数据，利用数据使用时序差分和蒙特卡洛的得到 $V_{\pi}(s)$ ，再根据 $V_{\pi}(s)$ 更新策略。
+
+实现优势演员-评论员算法的时候，有两个一定会用到的技巧。第一个技巧是，我们需要估计两个网络：V 网络和策略的网络（也就是演员）。评论员网络 $V_{\pi}(s)$ 接收一个状态，输出一个标量。演员的策略 $\pi (s)$ 接收一个状态，如果动作是离散的，输出就是一个动作的分布，如果动作是连续的，输出就是一个连续的向量。演员网络和评论员网络的输入都是 s，所以它们前面几个层是可以共享的。
+
+第二个技巧是我们需要探索的机制。在演员-评论员算法中，有一个常见的探索的方法是对 $\pi$ 输出的分布设置一个约束。这个约束用于使分布的熵（entropy）不要太小，也就是希望不同的动作被采用的概率平均一些。这样在测试的时候，智能体才会多尝试各种不同的动作，才会把环境探索得比较好，从而得到比较好的结果。
+
+
+### 异步优势演员-评论员算法（A3C）
+
+异步优势演员-评论员算法同时使用很多个进程（worker），异步优势演员-评论员算法一开始有一个全局网络。全局网络包含策略网络和价值网络，这两个网络是绑定在一起的，它们的前几个层会被绑在一起。假设全局网络的参数是 $\theta_1$，我们使用多个进程，每个进程用一张 CPU 去跑。比如我们有 8 个进程，则至少 8 张 CPU。每一个进程在工作前都会把全局网络的参数复制过来。接下来演员就与环境交互，每一个演员与环境交互的时候，都要收集到比较多样的数据。例如，如果是走迷宫，可能每一个演员起始的位置都会不一样，这样它们才能够收集到比较多样的数据。每一个演员与环境交互完之后，我们就会计算出梯度。计算出梯度以后，要用梯度去更新参数。我们就计算一下梯度，用梯度去更新全局网络的参数。就是这个进程算出梯度以后，就把梯度传回给中央的控制中心，中央的控制中心就会用这个梯度去更新原来的参数。
+
+
+### 路径衍生策略梯度
+
+这个方法可以看成是深度 Q 网络求解连续动作的一种特别方法。假设我们学习了一个 Q 函数，Q 函数的输入是 $s$ 与 $a$，输出是 $Q_{\pi}(s, a)$。接下来，我们要学习一个演员，这个演员的工作就是解决 arg max 的问题，即输入一个状态 $s$，希望可以输出一个动作 $a$。$a$ 被代入Q 函数以后，它可以让 $Q_{\pi}(s, a)$ 尽可能大，即
+
+$$
+\pi '(s) = \mathop {\arg \max }\limits_a {Q_\pi }(s,a)
+$$
+实际上在训练的时候，我们就是把 Q 与演员连接起来变成一个比较大的网络。Q 是一个网络，接收输入 s 与 a，输出一个值。演员在训练的时候，它要做的事就是接收输入 s，输出 a。把 a 代入 Q 中，希望输出的值越大越好。我们会固定住 Q 的参数，只调整演员的参数，用梯度上升的方法最大化 Q 的输出，这就是一个生成对抗网络，即有条件的生成对抗网络。
+
+一开始会有一个策略 $\pi$，它与环境交互并估计 Q 值。估计完 Q 值以后，我们就把 Q 值固定，只去学习一个演员。假设这个 Q 值估得很准，它知道在某一个状态采取什么样的动作会得到很大的 Q 值。接下来就学习这个演员，演员在给定 s 的时候，采取了 a，可以让最后 Q 函数算出来的值越大越好。我们用准则去更新策略 $\pi$，用新的 $\pi$ 与环境交互，再估计 Q 值，得到新的 $\pi$ 去最大化 Q 值的输出。深度 Q 网络里面的技巧，在这里也几乎都用得上，比如经验回放、探索等技巧。
+
+路径衍生策略梯度算法：
+
++ 初始化 Q 函数 $Q$，目标 Q 函数 $\hat Q=Q$，演员 $\pi$，目标演员 $\hat \pi=\pi$ 
++ 在每个回合中
+	+ 对于每个时间步
+		+ 获取状态 $s_t$，根据 $\pi$ 执行动作 $a_t$ （探索）
+		+ 获取奖励 $r_t$，到达新状态 $s_{t+1}$
+		+ 存储 $(s_t,a_t,r_t,s_{t+1})$ 到缓冲区
+		+ 从缓存区采样 $(s_t,a_t,r_t,s_{t+1})$ （通常是一个批量）
+		+ 目标 $y = {r_i} + \hat Q({s_{i + 1}},\hat \pi ({s_{i + 1}}))$
+		+ 更新 Q 的参数使得 $Q(s_i,a_i)$ 接近于 y（回归）
+		+ 更新 $\pi$ 的参数使得 $Q({s_i},\pi ({s_i}))$ 最大
+		+ 每 C 步重置 $\hat Q = Q$，$\hat\pi=\pi$
+
+
+## 稀疏奖励
+
+许多情况下，智能体在环境中获得的奖励是非常稀疏的，所以需要考虑如何在稀疏奖励的情况下与环境交互。
+
+
+### 设计奖励
+
+环境有一个固定的奖励，它是真正的奖励，但是为了让智能体学到的结果是我们想要的，我们可以设计一些奖励来引导智能体。如 Meta 玩 ViZDoom 的智能体的例子。ViZDoom 是一个第一人称射击游戏，在这个射击游戏中，杀了敌人得到正奖励，被杀得到负奖励。研究人员设计了一些新的奖励，用新的奖励来引导智能体让它们做得更好，这不是游戏中真正的奖励。比如掉血就扣分，弹药减少就扣分，捡到补给包就加分，待在原地就扣分，移动就加分。活着会扣一个很小的分数，因为如果不这样做，智能体会只想活着，一直躲避敌人，这样会让智能体好战一些。
+
+### 好奇心
+
+在网络加入一个新的奖励函数—内在好奇心模块，用来给智能体加上好奇心，内在好奇心模块需要 3 个输入：状态 $s_1$、动作 $a_1$ 和状态 $s_2$。根据输入，会输出另外一个奖励 $r_1^i$。对于智能体而言，总奖励并不是只有 r，还有 $r^i$。它不是只把所有的 r 都加起来，它还把所有 $r^i$ 加起来当作总奖励。所以在与环境交互的时候，它不是只希望 r 越大越好，它还同时希望 $r^i$ 越大越好，它希望从内在好奇心模块里面得到的奖励越大越好。内在好奇心模块代表一种好奇心。
+
+内在好奇心模块最原始的设计为：输入现在状态 $s_t$，动作 $a_t$ 和下一个状态 $s_{t+1}$，模块里面有一个网络，这个网络的输入是现在状态 $s_t$ 和动作 $a_t$，输出 $\hat s_{t+1}$，接下来比较 $\hat s_{t+1}$ 和 $s_{t+1}$ 的相似度，越不相似得到的奖励越大，即未来的状态越难被预测，得到的奖励越大。这个网络需要额外训练，在智能体与环境交互时，内在好奇心模块需要被固定住。
+
+为了避免内在好奇心模块被一些没有意义的东西吸引，可以增加一个特征提取网络，该网络用来过滤无关紧要的东西。具体训练方法是把向量 $\phi(s_t)$ 和 $\phi(s_{t+1})$ 作为输入，它要预测动作 a 是什么，希望这个动作 a 和真正的动作 a 越接近越好，这样我们提取的特征就会和一些没有意义的东西无关。
+
+
+### 课程学习
+
+课程学习是指我们为智能体的学习做规划，给他“喂”的训练数据是有顺序的，通常都是由简单到难的。课程设计有一个比较通用的方法：逆向课程生成，从最后最理想的状态开始，一步步寻找接近这些状态的状态。
+
+
+### 分层强化学习
+
+假设有多个智能体，一些智能体负责比较高级的东西，它们负责定目标，定完目标以后，再将目标分配给其他的智能体，让其他智能体来执行目标。
+
+
+## 模仿学习
+
+在多数情况下，智能体无法从环境中得到明确的奖励，因此可以通过收集人类的示例来让智能体模仿学习。
+
+### 行为克隆
+
+行为克隆与监督学习较为相似，人在状态 $s_i$ 时采取动作 $a_i$，在训练网络时，我们希望输入状态 $s_i$ 时输出为 $a_i$。虽然行为克隆简单，但是难以收集全部的示例，所以需要收集更多样的数据。
+
+
+### 逆强化学习
+
+原本的强化学习中有一个环境和奖励函数，根据环境和奖励函数会学习一个最佳策略。但在逆强化学习中没有奖励函数，只有专家的示范和环境。逆强化学习的奖励是从专家那里推出来，专家是因为什么样的奖励函数才会采取这些行为。有了奖励函数以后，接下来，我们就可以使用一般的强化学习的方法去找出最优策略。所以逆强化学习是先找出奖励函数，找出奖励函数以后，再用强化学习找出最优策略。
+
+
+## 深度确定性策略梯度
+
+深度确定性策略梯度（deep deterministic policy gradient，DDPG）可以拆解成深度、确定性和策略梯度，深度是因为用了神经网络，确定性表示输出的是确定性的动作，可以用于连续动作环境，策略梯度代表用的是策略网络。REINFORCE 算法每隔一个回合就更新一次，但 DDPG 是每个步骤都会更新一次策略网络，它是一个单步更新的策略网络。
+
+DDPG 是深度 Q 网络的一个扩展版本，可以扩展到连续动作空间。在 DDPG 的训练中，它借鉴了深度 Q 网络的技巧：目标网络和经验回放。经验回放与深度 Q 网络是一样的，但目标网络的更新与深度 Q 网络不一样。提出 DDPG 是为了让深度 Q 网络可以扩展到连续的动作空间。DDPG 在深度 Q 网络基础上加了一个策略网络来直接输出动作值，所以 DDPG 需要一边学习 Q 网络，一边学习策略网络。Q 网络的参数用 $w$ 来表示。策略网络的参数用 $\theta$ 来表示。我们称这样的结构为演员-评论员的结构。
+
+DDPG 与深度 Q 网络最大区别在于深度 Q 网络选择使得 Q 值最大的动作，而 DDPG 则有一个策略网络选择动作，策略网络 $\pi$ 也需要一个另外设置目标网络 $\pi_t$ 来使得训练更加稳定。为了然那个DDPG策略更好地探索，训练时给动作加上噪声（不相关、均值为 0 的高斯噪声效果好），训练过程中噪声也可以逐步变小。
+
+DDPG 的算法如下：
+
++ 初始化演员网络 $\mu(s|\theta^{\mu})$ 和评价员网络 $Q(s,a|\theta^{Q})$， 
++ 初始化对应的目标网络 $\mu'$ 和 $Q'$，并且复制权重
++ 初始化经验回访缓冲区 D
++ 执行M个回合，在每个回合中
+	+ 在每个时间步
+		+ 根据当前的策略和噪声选择动作 $a_t=\mu(s_t|\theta^{\mu})+N_t$
+		+ 环境根据 $a_t$ 反馈奖励 $r_t$ 和下一个状态 $s_{t+1}$
+		+ 存储转移即 $(s_t,a_t,r_t,s_{t+1})$ 到经验回放区D
+		+ 更新策略如下
+			+ 从D中随机采样N个小批量的数据
+			+ 计算实际Q值：${y_i} = {r_i} + \gamma Q'\left( {{s_{i + 1}},\mu '({s_{i + 1}}|{\theta ^{\mu '}})|{\theta ^{Q'}}} \right)$
+			+ 计算损失函数 $L = {1 \over N}\sum\nolimits_i {{{\left( {{y_i} - Q({s_i},{a_i}|{\theta ^Q})} \right)}^2}}$，更新评论员网络
+			+ 计算损失函数 $L =  - {1 \over N}\sum\nolimits_i {Q({s_i},{a_i})}$，更新演员网络
+			+ 软更新目标网络
+			+ ${\theta ^{Q'}} \leftarrow \tau {\theta ^Q} + (1 - \tau ){\theta ^{Q'}},{\theta ^{\mu '}} \leftarrow \tau {\theta ^\mu } + (1 - \tau ){\theta ^{\mu '}}$
+
+
+### 双延迟深度确定性策略梯度（TD3）
+
+虽然 DDPG 有时表现很好，但它对于超参数和其他类型的调整方面经常很敏感。双延迟深度确定性策略梯度（twin delayed DDPG，TD3）通过引入 3 个关键技巧来解决这个问题。
+
++ 截断的双 Q 学习：TD3 学习两个 Q 函数，通过最小化均方误差来同时学习两个 Q 函数：$Q_{\phi_1}$ 和 $Q_{\phi_2}$，两个 Q 函数都使用同个目标，两个 Q 函数中给出的较小的值会被作为 Q-target
+$$
+y(r,s',d) = r + \gamma (1 - d)\mathop {\min }\limits_{i = 1,2} {Q_{{\phi _i}_t}}(s',{a_{TD3}}(s'))
+$$
++ 延迟的策略更新（delayed policy updates）。相关实验结果表明，同步训练动作网络和评价网络，却不使用目标网络，会导致训练过程不稳定；但是仅固定动作网络时，评价网络往往能够收敛到正确的结果。因此 TD3 算法以较低的频率更新动作网络，以较高的频率更新评价网络，通常每更新两次评价网络就更新一次策略。
++ 目标策略平滑（target policy smoothing）。TD3 引入了平滑化（smoothing）思想。TD3 在目标动作中加入噪声，通过平滑 Q 沿动作的变化，使策略更难利用 Q 函数的误差。工作原理如下
+$$
+{a_{TD3}}(s') = {\rm{clip}}\left( {{\mu _{\theta t}}(s') + {\rm{clip}}(\varepsilon , - c,c),{a_{low}},{a_{high}}} \right)
+$$
+其中 ϵ 本质上是一个噪声，是从正态分布中取样得到的，即 $\varepsilon \sim N(0, \sigma)$。目标策略平滑化是一种正则化方法。
